--- a/src/index1.html
+++ b/src/index1.html
@@ -344,6 +344,109 @@
         <div><img src="//img.shop.hisense.com/2020/06/10/043702bb-bb44-4c82-be4d-da372c2f6a00.jpg" alt=""></div>
 
     </section>
+    <!-- 电视专区 -->
+    <section class="fool-3 wrapper">
+        <h3>电视专区</h3>
+
+        <div class="pic">
+            <div class="pic1"><img src="//img.shop.hisense.com/2020/04/17/88f997c0-bb9c-4a93-baa2-c17668fdb628.jpg" alt=""></div>
+            <div class="pic2">
+                <div><img src="//img.shop.hisense.com/2020/05/15/d924faee-4c92-4396-806e-68fb56830fff.jpg" alt=""></div>
+                <div><img src="//img.shop.hisense.com/2020/04/17/7d62c5f3-e17e-4189-b37b-03cb0e6aa8ad.jpg" alt=""></div>
+            </div>
+        </div>
+        <ul>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+        </ul>
+    </section>
+    <!-- 空调 -->
+    <section class="fool-3 wrapper">
+        <h3> 空调专区 </h3>
+
+        <div class="pic">
+            <div class="pic1"><img src="//img.shop.hisense.com/2020/04/17/33e1c7f8-1429-45d8-9de1-2631e7acedac.jpg" alt=""></div>
+            <div class="pic2">
+                <div><img src="//img.shop.hisense.com/2020/04/17/41230fd2-ba04-4381-a87c-956478f7cac8.jpg" alt=""></div>
+                <div><img src="//img.shop.hisense.com/2020/04/17/652777ae-8d31-447a-b5e7-a44b2d854dd4.jpg" alt=""></div>
+            </div>
+        </div>
+        <ul>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+            <li>
+                <a href="javascript:;"><img src=" //img.shop.hisense.com/2019/05/29/9af8e2dd-09f5-46c5-b89f-ec0bfdeb13b4.png " alt=" ">
+                    <h5>55英寸/AI声控/超薄全面屏/MEMC防抖/2GB+32GB电视</h5>
+
+                    <p class="item"> 活动价3099元爆款热销中
+                    </p>
+                    <p class="price">399999</p>
+                </a>
+            </li>
+        </ul>
+    </section>
+    <footer>
+
+    </footer>
 
 </body>
 
