第三次提交

--- a/src/index1.html
+++ b/src/index1.html
@@ -10,6 +10,7 @@
 </head>
 <link rel="stylesheet" href="./css/index.css">
 <link rel="stylesheet" href="./font_2114695_3s3i3470v0o/iconfont.css">
+<script src="./script/require.js" defer async="true" data-main="./script/index.js"></script>
 
 <body>
 
@@ -281,28 +282,28 @@
 
     <!-- 幻灯片 -->
 
-    <section class="banner">
+    <section class="lunbo">
         <!-- http://img.shop.hisense.com/2020/08/21/1a0fe7be-b410-44a1-90b7-5940083ad4b1.jpg -->
         <!-- img.shop.hisense.com/2020/08/21/1a0fe7be-b410-44a1-90b7-5940083ad4b1.jpg -->
         <div class="banner">
             <ul>
-                <li>
+                <li style="opacity: 1;">
                     <a href="#"><img src="http://img.shop.hisense.com/2020/08/21/1a0fe7be-b410-44a1-90b7-5940083ad4b1.jpg" alt=""></a>
                 </li>
-                <!-- <li>
-                    <a href="#"><img src="img/2.jpg" /></a>
+                <li>
+                    <a href="#"><img src="http://img.shop.hisense.com/2020/04/16/7ade08ca-5b4a-419f-8808-6a6da7ea044f.jpg" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="img/3.jpg" /></a>
+                    <a href="#"><img src="http://img.shop.hisense.com/2020/04/16/761de7b3-b91d-455c-a8b0-2db15339fc4c.jpg" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="img/4.jpg" /></a>
+                    <a href="#"><img src="http://img.shop.hisense.com/2020/04/16/fe402c32-0416-491d-8a09-94e9bcebd98a.jpg" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="img/5.jpg" /></a>
+                    <a href="#"><img src="http://img.shop.hisense.com/2020/04/16/a4d2ab72-412d-4980-8efa-9aa6c17c2bb8.jpg" /></a>
                 </li>
                 <li>
-                    <a href="#"><img src="img/1.jpg" /></a>
+                    <a href="#"><img src="http://img.shop.hisense.com/2020/04/16/70007e34-b080-4e7d-b763-885d9ef98098.jpg" /></a>
                 </li>
             </ul>
             <ol>
@@ -311,10 +312,12 @@
                 <li>3</li>
                 <li>4</li>
                 <li>5</li>
+                <li>6</li>
             </ol>
-            <a href="javascript:;" id="left">&lt;</a>
-            <a href="javascript:;" id="right">&gt;</a> -->
+
         </div>
+        <a href="javascript:;" id="left">&lt;</a>
+        <a href="javascript:;" id="right">&gt;</a>
     </section>
     <!--海信官网  -->
     <section class="fool-1 wrapper">
