--- a/src/index1.html
+++ b/src/index1.html
@@ -290,6 +290,273 @@
                 </div>
             </div>
         </div>
+        <!-- 顶部悬浮 -->
+        <div class="nav2 wrapper move_nav2">
+            <h1>
+                <a href="https://www.hisense.com/"><img src="//img.shop.hisense.com/2019/05/09/11248a1c-3f61-4e84-8963-7d7d6761a99c.png" alt=""></a>
+            </h1>
+            <ul>
+                <li><a href="javascript:;">官网</a></li>
+                <li><a href="javascript:;">国货品质节</a></li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">电视</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+                <li><a href="javascript:;">政企乐购</a>
+                    <div class="down_menu">
+                        <ul class="wrapper clearfix">
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+                            <li>
+                                <a href="./list.html"><img src="//img.shop.hisense.com/2019/06/14/87eb1729-99ed-4353-b1f4-fab8a4860258.png?x-oss-process=image/resize,m_mfit,h_48,w_48/sharpen,100" alt=""><span class="name">75寸</span></a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </li>
+
+            </ul>
+            <!-- 搜索框 -->
+            <div class="search">
+                <span class=" icon1 iconfont iconfangdajing"></span>
+                <div class="searchF">
+                    <span class="icon2 iconfont iconfangdajing"></span>
+                    <input type="text" name="q" placeholder="嗨森嘉年华 10.10-10.16 百万津贴礼赠海信用户">
+                    <button><span class="iconfont iconfenye-xiayiye "></span>
+                    </button>
+                    <ol>
+
+                    </ol>
+
+                </div>
+            </div>
+        </div>
+        <!-- 侧边栏 -->
+        <div class="right-nav">
+            <ul>
+                <li><span class="iconfont iconzaixianzixun"></span>
+                    <p>在线客服</p>
+                </li>
+                <li><a href="./cart.html"><span class="iconfont icongouwuche"></span>
+                    <p>购物车</p></a>
+                </li>
+                <li><span class="iconfont iconyidongduan"></span>
+                    <p>移动商城</p>
+                </li>
+                <li><span class="iconfont iconzuji"></span>
+                    <p>足迹</p>
+                </li>
+                <li class="goTop"><span class="iconfont iconhuidaodingbu"></span>
+                    <p>回到顶部</p>
+                </li>
+
+            </ul>
+        </div>
     </header>
 
     <!-- 幻灯片 -->
