第五次，购物车页面

--- a/src/index1.html
+++ b/src/index1.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="./css/index.css">
 <link rel="stylesheet" href="./font_2114695_3s3i3470v0o/iconfont.css">
 <script src="./script/require.js" defer async="true" data-main="./script/index.js"></script>
+<link href="../src/images/favicon (1).ico" type="image/x-icon" rel="shortcut icon">
 
 <body>
 
